--- a/gangneung_olympic_coffee/src/main/webapp/css/custom.css
+++ b/gangneung_olympic_coffee/src/main/webapp/css/custom.css
@@ -97,3 +97,11 @@ store출력을 위한 css
 	-o-filter: blur(6px);
 	filter: url(#blur);
 }
+
+/*rating 구현*/
+.star-rating {
+  line-height:32px;
+  font-size:1.25em;
+}
+
+.star-rating .fa-star{color: yellow;}
