--- a/gangneung_olympic_coffee/src/main/webapp/css/stylish-portfolio.css
+++ b/gangneung_olympic_coffee/src/main/webapp/css/stylish-portfolio.css
@@ -157,7 +157,7 @@ hr.small {
   display: table;
   width: 100%;
   height: 100%;
-  background: url(../img/bg.jpg) no-repeat center center scroll;
+  background: url(../img/gangneung-coffee-road.jpg) no-repeat center center scroll;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -188,9 +188,8 @@ hr.small {
 .callout {
   display: table;
   width: 100%;
-  height: 400px;
+  height: 0px;
   color: #fff;
-  background: url(../img/callout.jpg) no-repeat center center scroll;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
