--- a/gangneung_olympic_coffee/src/main/webapp/css/custom.css
+++ b/gangneung_olympic_coffee/src/main/webapp/css/custom.css
@@ -105,3 +105,13 @@ store출력을 위한 css
 }
 
 .star-rating .fa-star{color: yellow;}
+
+/*Main View 구현*/
+.main-title{
+	color: white;
+}
+
+.carousel-inner>.item>img, .carousel-inner>.item>a>img {
+	width: 100%;
+	margin: auto;
+}
