--- a/gangneung_olympic_coffee/src/main/webapp/css/stylish-portfolio.css
+++ b/gangneung_olympic_coffee/src/main/webapp/css/stylish-portfolio.css
@@ -156,8 +156,7 @@ hr.small {
   position: relative;
   display: table;
   width: 100%;
-  height: 100%;
-  background: url(../img/gangneung-coffee-road.jpg) no-repeat center center scroll;
+  height: auto;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
