--- a/gangneung_olympic_coffee/src/main/webapp/css/custom.css
+++ b/gangneung_olympic_coffee/src/main/webapp/css/custom.css
@@ -148,12 +148,43 @@ store출력을 위한 css
 .store_icon > img:hover{
 	background-color: #ffffffaa;
 }
+.left > img{
+	float: left;
+}
 /*google map 크기*/
-#map {
-	height: 400px;
+.map {
+	height: 600px;
 	width: 100%;
 }
-
+/*메뉴 리스트를 정리하기 위한 css*/
+.menu_list{
+	width: 100%;
+	height: 600px;
+	overflow: auto;
+}
+.menu_list> div{
+	display:inline-table;
+	width: 30%;
+	margin: 1%;
+}
+.price> span{
+	float: left;
+	width: 40%;
+}
+.price> .HOT{
+	color: red;
+}
+.price> .ICE{
+	color: blue;
+}
+.product-icon > img {
+	float: right;
+	width: 25px;
+	height: 25px;
+}
+.product-icon > img:hover{
+	background-color: #ffffffaa;
+}
 /*
 이미지 효과를 위한 css
 */
@@ -197,24 +228,4 @@ store출력을 위한 css
 /*커서 효과*/
 .cursor {
 	cursor: pointer;
-}
-/*우선 순위*/
-#absolute-index{
-	position: absolute;
-}
-
-#index-one{
-	z-index: 1;
-}
-#index-two{
-	z-index: 2;
-}
-#index-three{
-	z-index: 3;
-}
-#index-four{
-	z-index: 4;
-}
-#index-five{
-	z-index: 5;
 }
