--- a/gangneung_olympic_coffee/src/main/webapp/css/custom.css
+++ b/gangneung_olympic_coffee/src/main/webapp/css/custom.css
@@ -92,7 +92,6 @@ storeList 출력을 위한 css
 store출력을 위한 css
 */
 .store-div{
-	height: 500px;
 	background-size: 100% 100%;
 	display: table-cell;
 }
@@ -184,6 +183,25 @@ store출력을 위한 css
 }
 .product-icon > img:hover{
 	background-color: #ffffffaa;
+}
+
+/*
+스토어 간단한 소개
+*/
+.store-content> a > img {
+	width: 80%;
+	margin-top: 15px;
+	margin-bottom: 15px;
+	margin-right: 10%;
+	margin-left: 10%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.store-content{
+	margin-top: 20px;
+	text-align: center;
+	font-size: 18px;
+	border: 5px solid #66669922;
 }
 /*
 이미지 효과를 위한 css
