--- a/gangneung_olympic_coffee/src/main/webapp/css/custom.css
+++ b/gangneung_olympic_coffee/src/main/webapp/css/custom.css
@@ -1,7 +1,8 @@
  @import url(http://fonts.googleapis.com/earlyaccess/hanna.css);
 
-.brown-background {
-	background: #f2e6d9;
+.store-background {
+	background: white;
+	background-image: url('../img/background-patterns.svg');
 }
 
 .brown {
@@ -76,6 +77,7 @@ storeList 출력을 위한 css
 */
 .store-list{
 	display: inline-block;
+	width: auto;
 }
 .store-list-image{
 	width: 100%;
@@ -93,8 +95,14 @@ storeList 출력을 위한 css
 /*
 store출력을 위한 css
 */
+.storeListView{
+	margin: auto;
+	text-align: center;
+}
 .store-div{
-	background-size: 100% 100%;
+	height: 100%;
+	background-size: cover;
+	margin: auto;
 	display: table-cell;
 }
 .store-info{
@@ -173,6 +181,25 @@ store출력을 위한 css
 	width: 30%;
 	margin: 1%;
 }
+@media screen and (min-width: 768px){
+	.menu_list> div{
+		display:inline-table;
+		width: 20%;
+		margin-right:18% !important;
+		margin: 1%;
+	}
+	.menu_list> div:nth-child(3n+1){
+		width: 20%;
+		margin-left: 18% !important;
+		margin-right:0% !important;
+		margin: 1%;
+	}
+	.menu_list> div:nth-child(3n+2){
+		margin-right:0% !important;
+		width: 20%;
+		margin: 1%;
+	}
+}
 .price> span{
 	float: left;
 	width: 40%;
@@ -201,7 +228,17 @@ store출력을 위한 css
 	margin-bottom: 15px;
 	margin-right: 10%;
 	margin-left: 10%;
+	border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 12px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+@media screen and (min-width: 768px){
+	.store-content> a > img {
+		width: 50%;
+		margin-right: 25%;
+		margin-left: 25%;
+	}
 }
 
 .store-content{
