--- a/gangneung_olympic_coffee/src/main/webapp/css/style-effect.css
+++ b/gangneung_olympic_coffee/src/main/webapp/css/style-effect.css
@@ -90,7 +90,16 @@
   padding: 5px 10px;
   color: #000000;
 }
-
+@media screen and (min-width: 768px){
+		.snip1445 span {
+	  width:135px;
+	}
+}
+@media screen and (min-width: 1023px){
+		.snip1445 span {
+	  width:198px;
+	}
+}
 
 .snip1445 h6 {
   display: block;
